# simple-crew-builder

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
simple-crew-backend/: Dockerfile  examplo.env  logs.txt  mcp_adapter.py  mcp_test.py  pyproject.toml  requirements.txt  test_command.py  test_schema.py
simple-crew-backend/app/: ai_service.py  crew_builder.py  database.py  exporter.py  main.py  models.py  schemas.py  utils.py
simple-crew-backend/app/core/database/: neo4j_db.py
simple-crew-backend/app/core/rag/: document_parser.py  indexer.py
simple-crew-backend/app/routes/: knowledge_base.py  skills.py  webhooks.py
simple-crew-backend/app/services/: langgraph_engine.py
simple-crew-backend/app/tools/: fs_tools.py  grep_search.py  knowledge_base_search.py
simple-crew-backend/scratch/: test_interpolation_logic.py  test_state_defaults.py  test_state_fix.py
simple-crew-backend/scripts/: migrate_workspace_id.py  sync_db.py
simple-crew-backend/tests/: crew_builder_test.py  langgraph_engine_test.py
simple-crew-front/: .gitignore  Dockerfile  Dockerfile.dev  eslint.config.js  examplo.env.development  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  test-results.json  vite.config.ts
simple-crew-front/coverage/: coverage-final.json  index.html
simple-crew-front/coverage/components/: AboutModal.tsx.html  ChatInput.tsx.html  ChatMessage.tsx.html  ConfirmationModal.tsx.html  ConsoleDrawer.tsx.html  CustomSelect.tsx.html  ExecutionDetailModal.tsx.html  ExecutionTable.tsx.html  index.html  (+17 more)
simple-crew-front/e2e/: diagnostic.spec.ts  editor-variables.spec.ts  execution-animation.spec.ts  smoke.spec.ts
simple-crew-front/playwright-report/: index.html
simple-crew-front/src/: App.tsx  index.css  store.ts  types.ts
(+205 files in other folders)
